:construction: :heavy_plus_sign: Add mail test plus some changes in repositories
remove .env stuff
